Reader throws EOFException rather than returning null on end-of-input Fixed junit tests to enable preview features